add gyro tracking and movement of name in home
- movement in mobile with gyro tracking
- movement in pc with cursor tracking

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
 
   # packages
   url_launcher: ^6.0.18
-  rive: ^0.8.1
+  rive: ^0.8.1 # animations
+  sensors_plus: ^1.2.1 # mobile movements
 
 dev_dependencies:
   flutter_test:
