--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # packages
   url_launcher: ^6.0.18
   rive: ^0.8.1 # animations
+  google_fonts: ^2.3.1 # google fonts
 
 dev_dependencies:
   flutter_test:
