--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.0.18
   rive: ^0.8.1 # animations
   google_fonts: ^2.3.1 # google fonts
+  animated_background: ^2.0.0 # background animations
 
 dev_dependencies:
   flutter_test:
