--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
 
   # packages
   url_launcher: ^6.0.20
-  rive: ^0.8.1 # animations
+  rive: ^0.8.4 # animations
   google_fonts: ^2.3.1 # google fonts
   visibility_detector: ^0.2.2 # check if widget is visible
+  flutter_staggered_grid_view: ^0.6.1 # customize grid view
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   assets:
     - assets/
     - assets/rive/
+    - assets/projects/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
