--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^2.3.1 # google fonts
   visibility_detector: ^0.2.2 # check if widget is visible
   flutter_staggered_grid_view: ^0.6.1 # customize grid view
+  font_awesome_flutter: ^10.1.0 # for social icons
 
 dev_dependencies:
   flutter_test:
