add default branch config as main in workflow

--- a/.github/workflows/web_deploy.yml
+++ b/.github/workflows/web_deploy.yml
@@ -27,6 +27,7 @@ jobs:
           cd web-deploy
           git config --global user.email immadirajendra.sai@gmail.com
           git config --global user.name immadisairaj
+          git config --global init.defaultBranch main
           git init
           # the repository to push the deploy into
           git remote add origin https://${{secrets.ACCESS_TOKEN}}@github.com/immadisairaj/immadisairaj.github.io.git
