--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,15 @@ dependencies:
 
   # packages
   url_launcher: ^6.1.10
-  rive: ^0.11.1 # animations
-  google_fonts: ^4.0.4 # google fonts
+  rive: ^0.11.4 # animations
+  google_fonts: ^5.1.0 # google fonts
   visibility_detector: ^0.4.0 # check if widget is visible
   flutter_staggered_grid_view: ^0.6.2 # customize grid view
   font_awesome_flutter: ^10.4.0 # for social icons
+  js: ^0.6.7 # for google analytics routing
+
+dependency_overrides:
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
