remove no tree shake from github actions

--- a/.github/workflows/web_deploy.yml
+++ b/.github/workflows/web_deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run: flutter clean
       - run: flutter pub get
-      - run: flutter build web --release --no-tree-shake-icons
+      - run: flutter build web --release
 
       # Web deploy now is contained in build/web directory
       - run: |
